--- a/VisitorWebApp/templates/hotelsInPune.html
+++ b/VisitorWebApp/templates/hotelsInPune.html
@@ -143,7 +143,7 @@
                 <img src="https://ik.imagekit.io/tvlk/apr-asset/TzEv3ZUmG4-4Dz22hvmO9NUDzw1DGCIdWl4oPtKumOg=/hotels/5000000/4540000/4532900/4532832/167d4783_z.jpg?tr=q-40,c-at_max,w-740,h-500&_src=imagekit" alt="Mountains" style="width:100%">
             </div>
         </div>
-        <h2>About Courtyard by Marriott Pune Chakan</h2>
+        <h2>About Orchid Hotel Hinjewadi Pune</h2>
         <p>Situated in Chakan’s industrial area, on the northern outskirts of Pune, the eco-friendly Courtyard by Marriott Pune Chakan takes pride in its modern fitness centre, outdoor lap pool, 24-hour restaurant, and outdoor/indoor game zones. Furnished
             with featherbed mattresses, the upscale rooms are fully air-conditioned. Standard amenities include satellite TVs, safes, fridges, iPod docks, ergonomic desks, and free signature toiletries. Suites with separate living areas and pet-friendly
             rooms are also available. Courtyard by Marriott Pune Chakan features a business centre, a conference hall, and an outdoor event space.</p>
